# Husky-gps-navigation-in-ROS

./: package.xml  setup.cfg  setup.py
husky_navigation_pkg/: Untitled-1.py  auto_initial_pose.py  check_imu.py  gps_navigation.py  map_plot.py  map_plot_v2.py  republish_tf_static.py  simple_gps_navigation.py  simple_gps_navigation_fix_speed.py  simple_gps_navigation_fix_speed_v2.py  simple_map_plot.py  simple_map_plot_v2.py
husky_navigation_pkg/Instructions/: Instructions.md  simple_gps_nav.md  simple_gps_nav_v2.md
launch/: robot_spawn.launch.py
maps/: empty_map.pgm  empty_map.yaml  lab_map.pgm  lab_map.yaml  map_name.pgm  map_name.yaml  solar_farm.pgm  solar_farm.yaml
setup/: package_setup.sh  setup_husky_ws.sh
